catkin_ws/logs/backend/build.make.753.log.stderr
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:7:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:248:40: error: expected identifier before ‘new’
  boost::shared_ptr<bool> badFrameFlag (new bool);
                                        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:248:40: error: expected ‘,’ or ‘...’ before ‘new’
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In member function ‘void SLAM::Frame::setBadFrameFlag(bool)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:235:37: error: invalid use of member function (did you forget the ‘()’ ?)
  void setBadFrameFlag(bool flag) { *badFrameFlag = flag; }
                                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In member function ‘bool SLAM::Frame::getBadFrameFlag() const’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:237:41: error: invalid use of member function (did you forget the ‘()’ ?)
  bool getBadFrameFlag() const { return *badFrameFlag; }
                                         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In constructor ‘SLAM::Frame::Frame(boost::shared_ptr<cv::Mat>&, boost::shared_ptr<cv::Mat>&, boost::shared_ptr<cv::Mat>&, boost::shared_ptr<double>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:247:26: warning: ‘SLAM::Frame::newNodeFlag’ will be initialized after [-Wreorder]
  boost::shared_ptr<bool> newNodeFlag;
                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:245:26: warning:   ‘boost::shared_ptr<bool> SLAM::Frame::keyFrameFlag’ [-Wreorder]
  boost::shared_ptr<bool> keyFrameFlag;
                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:18:1: warning:   when initialized here [-Wreorder]
 Frame::Frame(boost::shared_ptr<cv::Mat>& rgbImage, boost::shared_ptr<cv::Mat>& grayImage, boost::shared_ptr<cv::Mat>& depthImage, boost::shared_ptr<double>& timeStamp)
 ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:28:3: error: invalid use of member function (did you forget the ‘()’ ?)
  *badFrameFlag = false;
   ^
make[2]: *** [CMakeFiles/frontend.dir/src/Frame.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frontend.h:18:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frontend.cpp:13:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:248:40: error: expected identifier before ‘new’
  boost::shared_ptr<bool> badFrameFlag (new bool);
                                        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:248:40: error: expected ‘,’ or ‘...’ before ‘new’
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In member function ‘void SLAM::Frame::setBadFrameFlag(bool)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:235:37: error: invalid use of member function (did you forget the ‘()’ ?)
  void setBadFrameFlag(bool flag) { *badFrameFlag = flag; }
                                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In member function ‘bool SLAM::Frame::getBadFrameFlag() const’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:237:41: error: invalid use of member function (did you forget the ‘()’ ?)
  bool getBadFrameFlag() const { return *badFrameFlag; }
                                         ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/FrameToPcConverter.h:14:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/FrameToPcConverter.cpp:7:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:248:40: error: expected identifier before ‘new’
  boost::shared_ptr<bool> badFrameFlag (new bool);
                                        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:248:40: error: expected ‘,’ or ‘...’ before ‘new’
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In member function ‘void SLAM::Frame::setBadFrameFlag(bool)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:235:37: error: invalid use of member function (did you forget the ‘()’ ?)
  void setBadFrameFlag(bool flag) { *badFrameFlag = flag; }
                                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In member function ‘bool SLAM::Frame::getBadFrameFlag() const’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:237:41: error: invalid use of member function (did you forget the ‘()’ ?)
  bool getBadFrameFlag() const { return *badFrameFlag; }
                                         ^
make[2]: *** [CMakeFiles/frontend.dir/src/FrameToPcConverter.cpp.o] Error 1
make[2]: *** [CMakeFiles/frontend.dir/src/Frontend.cpp.o] Error 1
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:21:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:16:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:248:40: error: expected identifier before ‘new’
  boost::shared_ptr<bool> badFrameFlag (new bool);
                                        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:248:40: error: expected ‘,’ or ‘...’ before ‘new’
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In member function ‘void SLAM::Frame::setBadFrameFlag(bool)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:235:37: error: invalid use of member function (did you forget the ‘()’ ?)
  void setBadFrameFlag(bool flag) { *badFrameFlag = flag; }
                                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In member function ‘bool SLAM::Frame::getBadFrameFlag() const’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:237:41: error: invalid use of member function (did you forget the ‘()’ ?)
  bool getBadFrameFlag() const { return *badFrameFlag; }
                                         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::matchTwoFrames(const SLAM::Frame&, const SLAM::Frame&, bool&, bool&, Eigen::Isometry3d&, Eigen::Matrix<double, 6, 6>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:312:14: warning: unused variable ‘logName’ [-Wunused-variable]
  static char logName [50];
              ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:21:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:16:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In member function ‘bool SLAM::Frame::getBadFrameFlag() const’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:237:55: warning: control reaches end of non-void function [-Wreturn-type]
  bool getBadFrameFlag() const { return *badFrameFlag; }
                                                       ^
make[2]: *** [CMakeFiles/frontend.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
